--- a/page1.html
+++ b/page1.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="auther" content="JYUN-HAO YE" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Feeling18-18度C巧克力工房Taiwan南投埔里職人巧克力，推薦招牌生巧克力、藏心巧克力禮盒。以台灣在地食材結合歐洲進口巧克力，手工製作。"
+    />
+    <meta
+      name="keywords"
+      content="情人節禮物，情人節巧克力，情人節送禮，女朋友，巧克力推薦，聖誕節送禮，過年送禮，聖誕禮物，巧克力，巧克力DIY，生巧克力"
+    />
     <base target="_self" />
-    <title>Document</title>
-    <link rel="shortcut icon" href="" />
-    <link rel="bookmark" href="" />
+    <title>Feeling18-18度C巧克力工房</title>
+    <link rel="shortcut icon" href="./Image/favicon.ico" />
+    <link rel="bookmark" href="./Image/favicon.ico" />
     <link
       rek="stylesheet"
       href="https://unpkg.com/ress@5.0.2/dist/ress.min.css"
