--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
       <!--  bg-body-tertiary-->
       <div class="container-fluid">
         <!-- 品牌logo -->
-        <a class="navbar-brand" href="./page1.html"
+        <a class="navbar-brand" href="./index.html"
           ><img src="./Image/logo@2x_Resize Image(2).jpg"
         /></a>
         <!-- 第一部分 : 手機板 -->
@@ -60,7 +60,7 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">美味選購</a>
+                <a class="nav-link" aria-current="page" href="/page1.html">美味選購</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">會員專區</a>
@@ -118,8 +118,8 @@
     <footer class="footer">
       <ul>
         <li><a href="#">品牌地圖</a></li>
-        <li><a href="#">關於18度C</a></li>
-        <li><a href="#">美味選購</a></li>
+        <li><a href="./about.html">關於18度C</a></li>
+        <li><a href="./page1.html">美味選購</a></li>
         <li><a href="#">最新消息</a></li>
         <li><a href="#">快速訂購</a></li>
         <li><a href="#">購物須知</a></li>
