--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     />
     <link rel="stylesheet" href="./style/style.css" />
   </head>
-  <body style="padding-top:65px">
-    <nav class="navbar navbar-expand-lg fixed-top">
-      <!--  bg-body-tertiary-->
+  <body style="padding-top: 65px">
+    <nav class="navbar bg-body-tertiary fixed-top">
+      <!--  bg-body-tertiary navbar-expand-lg-->
       <div class="container-fluid">
         <!-- 品牌logo -->
         <a class="navbar-brand" href="./index.html"
@@ -60,7 +60,9 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/page1.html">美味選購</a>
+                <a class="nav-link" aria-current="page" href="./page1.html"
+                  >美味選購</a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">會員專區</a>
@@ -82,35 +84,10 @@
         </div>
       </div>
     </nav>
-    <div class="about-bg-img">
-      <h2 class="about-title">關於18度C</h2>
+    <div class="index-bg">
+      <img class="index-bg-img" src="./Image/idx-hand.png" alt="pic" />
+      <a href="./page1.html" class="index-btn-group">Click</a>
     </div>
-    <div class="about-link-group wrapper">
-      <ul>
-        <li><a class="about-link" href="./about.html">品牌故事</a></li>
-        <li><a class="about-link" href="#">18度沿革</a></li>
-        <li><a class="about-link" href="#">經營理念</a></li>
-        <li><a class="about-link active" href="./map.html">交通位置</a></li>
-      </ul>
-    </div>
-    <div class="about-map wrapper">
-      <a href="https://goo.gl/maps/JJC37F1Ha7c2md3M9"
-        ><img src="./Image/map.jpg"
-      /></a>
-    </div>
-    <footer class="footer">
-      <ul>
-        <li><a href="#">品牌地圖</a></li>
-        <li><a href="./about.html">關於18度C</a></li>
-        <li><a href="./page1.html">美味選購</a></li>
-        <li><a href="#">最新消息</a></li>
-        <li><a href="#">快速訂購</a></li>
-        <li><a href="#">購物須知</a></li>
-        <li><a href="#">會員專區</a></li>
-        <li><a href="#">常見問題</a></li>
-        <li><a href="#">聯絡我們</a></li>
-      </ul>
-    </footer>
   </body>
   <script src="./style/bootstrap/js/bootstrap.js"></script>
 </html>
