--- a/about.html
+++ b/about.html
@@ -20,6 +20,12 @@
       rek="stylesheet"
       href="https://unpkg.com/ress@5.0.2/dist/ress.min.css"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body style="padding-top: 65px">
@@ -60,7 +66,9 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/page1.html">美味選購</a>
+                <a class="nav-link" aria-current="page" href="/page1.html"
+                  >美味選購</a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">會員專區</a>
@@ -129,5 +137,9 @@
       </ul>
     </footer>
   </body>
-  <script src="./style/bootstrap/js/bootstrap.js"></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"
+  ></script>
 </html>
