--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
       rek="stylesheet"
       href="https://unpkg.com/ress@5.0.2/dist/ress.min.css"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body style="padding-top: 65px">
@@ -89,5 +95,9 @@
       <a href="./page1.html" class="index-btn-group">Click</a>
     </div>
   </body>
-  <script src="./style/bootstrap/js/bootstrap.js"></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"
+  ></script>
 </html>
