--- a/map.html
+++ b/map.html
@@ -20,9 +20,15 @@
       rek="stylesheet"
       href="https://unpkg.com/ress@5.0.2/dist/ress.min.css"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./style/style.css" />
   </head>
-  <body style="padding-top:65px">
+  <body style="padding-top: 65px">
     <nav class="navbar navbar-expand-lg fixed-top">
       <!--  bg-body-tertiary-->
       <div class="container-fluid">
@@ -60,7 +66,9 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/page1.html">美味選購</a>
+                <a class="nav-link" aria-current="page" href="/page1.html"
+                  >美味選購</a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">會員專區</a>
@@ -97,6 +105,16 @@
       <a href="https://goo.gl/maps/JJC37F1Ha7c2md3M9"
         ><img src="./Image/map.jpg"
       /></a>
+      <iframe
+        class="ifram"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3646.0869047409305!2d120.97229387529795!3d23.95736687852978!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3468d9903ee0d9a1%3A0xc9a0d6dbd450853b!2sFeeling%2018!5e0!3m2!1szh-TW!2stw!4v1681536739730!5m2!1szh-TW!2stw"
+        width="600"
+        height="450"
+        style="border: 0"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
     </div>
     <footer class="footer">
       <ul>
@@ -112,5 +130,9 @@
       </ul>
     </footer>
   </body>
-  <script src="./style/bootstrap/js/bootstrap.js"></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"
+  ></script>
 </html>
