--- a/page1.html
+++ b/page1.html
@@ -20,6 +20,12 @@
       rek="stylesheet"
       href="https://unpkg.com/ress@5.0.2/dist/ress.min.css"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body class="bodystyle">
@@ -28,7 +34,7 @@
       <div class="container-fluid">
         <!-- 品牌logo -->
         <a class="navbar-brand" href="./index.html"
-          ><img src="./Image/logo@2x_Resize Image(2).jpg"
+          ><img src="./Image/logo@2x_Resize Image(2).jpg" alt="pic"
         /></a>
         <!-- 第一部分 : 手機板 -->
         <button
@@ -60,7 +66,9 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/page1.html">美味選購</a>
+                <a class="nav-link" aria-current="page" href="/page1.html"
+                  >美味選購</a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">會員專區</a>
@@ -114,21 +122,21 @@
           <img
             src="./Image/1636102508593.png"
             class="d-block w-100"
-            alt="..."
+            alt="pic"
           />
         </div>
         <div class="carousel-item">
           <img
             src="./Image/1676364069695.jpg"
             class="d-block w-100"
-            alt="..."
+            alt="pic"
           />
         </div>
         <div class="carousel-item">
           <img
             src="./Image/1678844870666.jpg"
             class="d-block w-100"
-            alt="..."
+            alt="pic"
           />
         </div>
       </div>
@@ -171,43 +179,43 @@
     <div class="news-card wrapper">
       <a class="bg-item" href="#">
         <div class="item">
-          <img src="./Image/chocolate1.png" />
+          <img src="./Image/chocolate1.png" alt="pic" />
           <p>85%濃郁生巧克力(20入/盒)<br /><span>NT$ 660</span></p>
         </div>
       </a>
       <a class="bg-item" href="#">
         <div class="item">
-          <img src="./Image/chocolate1.png" />
+          <img src="./Image/chocolate1.png" alt="pic" />
           <p>85%濃郁生巧克力(20入/盒)<br /><span>NT$ 660</span></p>
         </div>
       </a>
       <a class="bg-item" href="#">
         <div class="item">
-          <img src="./Image/chocolate1.png" />
+          <img src="./Image/chocolate1.png" alt="pic" />
           <p>85%濃郁生巧克力(20入/盒)<br /><span>NT$ 660</span></p>
         </div>
       </a>
       <a class="bg-item" href="#">
         <div class="item">
-          <img src="./Image/chocolate1.png" />
+          <img src="./Image/chocolate1.png" alt="pic" />
           <p>85%濃郁生巧克力(20入/盒)<br /><span>NT$ 660</span></p>
         </div>
       </a>
       <a class="bg-item" href="#">
         <div class="item">
-          <img src="./Image/chocolate1.png" />
+          <img src="./Image/chocolate1.png" alt="pic" />
           <p>85%濃郁生巧克力(20入/盒)<br /><span>NT$ 660</span></p>
         </div>
       </a>
       <a class="bg-item" href="#">
         <div class="item">
-          <img src="./Image/chocolate1.png" />
+          <img src="./Image/chocolate1.png" alt="pic" />
           <p>85%濃郁生巧克力(20入/盒)<br /><span>NT$ 660</span></p>
         </div>
       </a>
       <a class="bg-item" href="#">
         <div class="item">
-          <img src="./Image/chocolate1.png" />
+          <img src="./Image/chocolate1.png" alt="pic" />
           <p>85%濃郁生巧克力(20入/盒)<br /><span>NT$ 660</span></p>
         </div>
       </a>
@@ -226,5 +234,9 @@
       </ul>
     </footer>
   </body>
-  <script src="./style/bootstrap/js/bootstrap.js"></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"
+  ></script>
 </html>
