--- a/map.html
+++ b/map.html
@@ -64,26 +64,31 @@
             ></button>
           </div>
           <div class="offcanvas-body">
-            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+            <ul
+              id="menu"
+              class="navbar-nav justify-content-end flex-grow-1 pe-3"
+            >
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/page1.html"
-                  >美味選購</a
+                <a class="nav-link" href="./page1.html"
+                  ><span>Products</span>美味選購</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">會員專區</a>
+                <a class="nav-link" href="#"><span>Member</span>會員專區</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">最新消息</a>
+                <a class="nav-link" href="#"><span>News</span>最新消息</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">品牌地圖</a>
+                <a class="nav-link" href="#"><span>Brand</span>品牌地圖</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./about.html">關於18度C</a>
+                <a class="nav-link" href="./about.html"
+                  ><span>About 18</span>關於18度C</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">聯絡我們</a>
+                <a class="nav-link" href="#"><span>Contact</span>聯絡我們</a>
               </li>
             </ul>
           </div>
