--- a/about.html
+++ b/about.html
@@ -26,6 +26,9 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
     <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body style="padding-top: 65px">
@@ -113,7 +116,7 @@
         </div>
         <div class="right-group">
           <div class="right-title">&#9472; 連結幸福 分享愛</div>
-          <div class="right-text">
+          <div class="right-text" data-aos="fade-right">
             在一開始，其實誰也不知道，這個小小夢想，會變得這麼巨大。<br />
             <br />巧克力工房，2006年從網路發跡。以Feeling18為名，是由於攝氏18度的溫度，對於巧克力來說，無論是生產、保存、或是品嚐，都是最能呈現巧克力風味及優良品質的溫度。溫度上的堅持，是初衷，也是不變的承諾。我們對於巧克力品質的堅持，獲得了廣大網友肯定，遂於2007年在埔里小鎮，開設了實體店面。大膽選在自家住宅區做為起點，留在家鄉耕耘，避免都市高成本的店租，將成本著重在原料，做出值得細細品味的高品質巧克力，提供給大家品嚐。
           </div>
@@ -121,7 +124,7 @@
         </div>
       </div>
       <div class="bottom-group">
-        <div class="bottom-text">
+        <div class="bottom-text" data-aos="fade-right">
           每一份用心，總會被珍惜。來賓肯定後的口耳相傳、熱心分享，讓Feeling18成為來到埔里山城的必訪之處。Feeling18不以我們現有的成績自滿，而是努力精進成長。2009年推出天然低脂、低糖的Gelato18義式手工冰淇淋
           ，打破人們對冰淇淋的既定印象，提供只加新鮮水果的美味冰淇淋，為您的健康把關。2010年為了不讓來賓為了巧克力等候過久，我們精選店內的招牌商品成立了快速選購區，貼心節省來賓寶貴的時間。同年9月18日，更開設「木輪十八」蛋糕店，引進日本技術，嚴選日本進口麵粉及台灣頂級龍眼蜜，十八層耐心烘焙地木輪蛋糕。不容一絲懈怠，只因為我們對美味的堅持和誠意。
           Feeling18，證明了築夢踏實，堅定不懈，最終總會達成夢想！除了現有的三個品牌，我們也即將在不久的將來，提供美味的手工果醬、精緻的烘焙餅乾，以及風味獨特的水果酥。Feeling18目前也正積極擴展海外版圖，期盼很快地在香港、大陸等地，與更多人分享Feeling18的幸福甜意。
@@ -141,6 +144,9 @@
         <li><a href="#">聯絡我們</a></li>
       </ul>
     </footer>
+    <script>
+      AOS.init();
+    </script>
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
